# target-databricks

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_databricks/: __init__.py  connector.py  sinks.py  target.py
target_databricks/stage/: s3_parquet.py
tests/: __init__.py  test_core.py
