[tool.poetry]
name = "target-databricks"
version = "0.0.1"
description = "`target-databricks` is a Singer target for databricks, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Prakhar Srivastava <prakhar.srivastava@tiqets.com>"]
keywords = [
    "ELT",
    "databricks",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.34.0b1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
pyarrow = "^14.0.1"
boto3 = "^1.33.8"
sqlalchemy = "2.0.25"
databricks-sql-connector = "^3.0.1"
alembic = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.34.0b1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
src = ["target_databricks"]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_databricks"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-databricks = 'target_databricks.target:Targetdatabricks.cli'
